# cbbio-learning

./: README.md  pyproject.toml
cbbio_learning/: pred.py  pred_binary.py  pred_per_residue.py
data/: merged_sf_metamorphic_regions.csv
docs/source/: conf.py  template.rst
tests/: test_template.py
